objects/Inventory_Transaction__c/Inventory_Transaction__c.object-meta.xml
<CustomObject>
    <description>Inventory Transaction</description>
    <label>Serial Number</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Serial Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>