objects/Inventory_Transaction__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <formula>Sales_Order__r.Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountId</label>
    <type>Text</type>
</CustomField>