objects/Inventory_Transaction__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>IF(NOT(ISBLANK(SalesOrder__c)),
SalesOrder__r.Account__r.Name,

IF(
AND(NOT(ISBLANK(Required_Part__c)),NOT(ISBLANK( Required_Part__r.Service_Sheet__c ))), Required_Part__r.Service_Sheet__r.Site__r.Name ,

IF(
AND(NOT(ISBLANK(Required_Part__c)),NOT(ISBLANK(  Required_Part__r.Maintenance_Reactive_Sheet__c ))), Required_Part__r.Maintenance_Reactive_Sheet__r.Site__r.Name,Who_Bought__c
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>