objects/Inventory_Transaction__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Serial Numbers</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>