objects/Inventory_Transaction__c/fields/Invoiced_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>