objects/Inventory_Transaction__c/fields/Items__c.field-meta.xml
<CustomField>
    <fullName>Items__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Moving Status</relationshipLabel>
    <relationshipName>Serial_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>