objects/Inventory_Transaction__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Serial Numbers</relationshipLabel>
    <relationshipName>Inventory_Transactions_del</relationshipName>
    <type>Lookup</type>
</CustomField>