objects/Inventory_Transaction__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <formula>IF(AND(!ISBLANK(OpportunityLineItemId__c),!ISBLANK(Opportunity_Product_Name__c)),HYPERLINK(&quot;/&quot; &amp;  OpportunityLineItemId__c, Opportunity_Product_Name__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Product</label>
    <type>Text</type>
</CustomField>