objects/Inventory_Transaction__c/fields/OpportunityLineItemId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItemId__c</fullName>
    <label>OpportunityLineItemId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>