objects/Inventory_Transaction__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <label>Product2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>