objects/Inventory_Transaction__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>Inventory__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>