objects/Inventory_Transaction__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <formula>Inventory__r.Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product_Id</label>
    <type>Text</type>
</CustomField>