objects/Inventory_Transaction__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>PurchaseOrder__c</referenceTo>
    <relationshipLabel>Serial Numbers</relationshipLabel>
    <relationshipName>Serial_Numbers_del</relationshipName>
    <type>Lookup</type>
</CustomField>