objects/Inventory_Transaction__c/fields/Required_Part__c.field-meta.xml
<CustomField>
    <fullName>Required_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Required Part</label>
    <referenceTo>Required_Parts__c</referenceTo>
    <relationshipLabel>Serial Numbers</relationshipLabel>
    <relationshipName>Serial_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>