objects/Inventory_Transaction__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Serial Numbers</relationshipLabel>
    <relationshipName>Serial_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>