objects/Inventory_Transaction__c/fields/SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Serial Numbers</relationshipLabel>
    <relationshipName>Serial_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>