objects/Inventory_Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
                <default>true</default>
                <label>Received</label>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>In Vehicle</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>