objects/Inventory_Transaction__c/fields/TransferDate__c.field-meta.xml
<CustomField>
    <fullName>TransferDate__c</fullName>
    <label>TransferDate</label>
    <type>Date</type>
</CustomField>