objects/Inventory_Transaction__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Vehicle__c.Available__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Serial Numbers</relationshipLabel>
    <relationshipName>Serial_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>