objects/Inventory_Transaction__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <formula>Inventory__r.Warehouse__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse</label>
    <type>Text</type>
</CustomField>