objects/Inventory_Transaction__c/fields/Warehouse_id__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_id__c</fullName>
    <formula>Inventory__r.Warehouse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse id</label>
    <type>Text</type>
</CustomField>