objects/Inventory_Transaction__c/fields/Who_Bought__c.field-meta.xml
<CustomField>
    <fullName>Who_Bought__c</fullName>
    <label>Who Bought</label>
    <length>255</length>
    <type>Text</type>
</CustomField>