objects/Inventory_Transaction__c/validationRules/In_Vehicle.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Vehicle</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL( Transaction_Type__c , &quot;In Vehicle&quot;) )  ,Vehicle__c  &lt;&gt; &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Transaction_Type__c</errorDisplayField>
    <errorMessage>Status should be In Vehicle if Vehicle is filled.</errorMessage>
</ValidationRule>