objects/Inventory_Transaction__c/validationRules/Serial_Number_length.validationRule-meta.xml
<ValidationRule>
    <fullName>Serial_Number_length</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( Name )  &gt; 80</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Serial Number exceeds the maximum length</errorMessage>
</ValidationRule>