objects/Inventory_Transaction__c/validationRules/Vehicle_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Vehicle_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Vehicle__c   = &apos;&apos;, ISPICKVAL(Transaction_Type__c , &quot;In Vehicle&quot;))</errorConditionFormula>
    <errorDisplayField>Vehicle__c</errorDisplayField>
    <errorMessage>Vehicle is mandatory for status In Vehicle</errorMessage>
</ValidationRule>